// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given a bigger example converts it to render data 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "id": 0,
        "ref": Object {
          "current": null,
        },
        "type": 0,
      },
      "id": 0,
      "parentId": undefined,
      "path": Array [],
      "y": 0,
    },
  ],
  Array [
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 1,
        "ref": Object {
          "current": null,
        },
        "type": 1,
      },
      "id": 1,
      "parentId": 0,
      "path": Array [
        0,
      ],
      "y": 0,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 4,
        "ref": Object {
          "current": null,
        },
        "type": 2,
      },
      "id": 4,
      "parentId": 0,
      "path": Array [
        1,
      ],
      "y": 2,
    },
  ],
  Array [
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 2,
        "ref": Object {
          "current": null,
        },
        "type": 1,
      },
      "id": 2,
      "parentId": 1,
      "path": Array [
        0,
        0,
      ],
      "y": 0,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 3,
        "ref": Object {
          "current": null,
        },
        "type": 2,
      },
      "id": 3,
      "parentId": 1,
      "path": Array [
        0,
        1,
      ],
      "y": 1,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 5,
        "ref": Object {
          "current": null,
        },
        "type": 1,
      },
      "id": 5,
      "parentId": 4,
      "path": Array [
        1,
        0,
      ],
      "y": 2,
    },
  ],
]
`;

exports[`given a bigger example converts it to render data with collapsed children 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "id": 0,
        "ref": Object {
          "current": null,
        },
        "type": 0,
      },
      "id": 0,
      "parentId": undefined,
      "path": Array [],
      "y": 0,
    },
  ],
  Array [
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 1,
        "ref": Object {
          "current": null,
        },
        "type": 1,
      },
      "id": 1,
      "parentId": 0,
      "path": Array [
        0,
      ],
      "y": 0,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 4,
        "ref": Object {
          "current": null,
        },
        "type": 2,
      },
      "id": 2,
      "parentId": 0,
      "path": Array [
        1,
      ],
      "y": 1,
    },
  ],
  Array [
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 5,
        "ref": Object {
          "current": null,
        },
        "type": 1,
      },
      "id": 3,
      "parentId": 2,
      "path": Array [
        1,
        0,
      ],
      "y": 1,
    },
  ],
]
`;

exports[`given a real example general tree converts it to render data 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "id": 0,
        "ref": Object {
          "current": null,
        },
        "type": 0,
      },
      "id": 0,
      "parentId": undefined,
      "path": Array [],
      "y": 0,
    },
  ],
  Array [
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 4,
        "ref": Object {
          "current": null,
        },
        "type": 1,
      },
      "id": 1,
      "parentId": 0,
      "path": Array [
        0,
      ],
      "y": 0,
    },
  ],
  Array [
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 14,
        "ref": Object {
          "current": Object {},
        },
        "type": 1,
      },
      "id": 2,
      "parentId": 1,
      "path": Array [
        0,
        0,
      ],
      "y": 0,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 15,
        "ref": Object {
          "current": Object {},
        },
        "type": 1,
      },
      "id": 4,
      "parentId": 1,
      "path": Array [
        0,
        1,
      ],
      "y": 1,
    },
  ],
  Array [
    Object {
      "data": Object {
        "id": 45,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 3,
      "parentId": 2,
      "path": Array [
        0,
        0,
        0,
      ],
      "y": 0,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 17,
        "ref": Object {
          "current": Object {},
        },
        "scrollAxis": 1,
        "type": 1,
      },
      "id": 5,
      "parentId": 4,
      "path": Array [
        0,
        1,
        0,
      ],
      "y": 1,
    },
    Object {
      "data": Object {
        "disabled": false,
        "hidden": false,
        "id": 19,
        "ref": Object {
          "current": Object {},
        },
        "scrollAxis": 1,
        "type": 1,
      },
      "id": 14,
      "parentId": 4,
      "path": Array [
        0,
        1,
        1,
      ],
      "y": 9,
    },
  ],
  Array [
    Object {
      "data": Object {
        "id": 22,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 6,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        0,
      ],
      "y": 1,
    },
    Object {
      "data": Object {
        "id": 23,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 7,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        1,
      ],
      "y": 2,
    },
    Object {
      "data": Object {
        "id": 24,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 8,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        2,
      ],
      "y": 3,
    },
    Object {
      "data": Object {
        "id": 25,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 9,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        3,
      ],
      "y": 4,
    },
    Object {
      "data": Object {
        "id": 26,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 10,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        4,
      ],
      "y": 5,
    },
    Object {
      "data": Object {
        "id": 27,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 11,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        5,
      ],
      "y": 6,
    },
    Object {
      "data": Object {
        "id": 28,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 12,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        6,
      ],
      "y": 7,
    },
    Object {
      "data": Object {
        "id": 29,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 13,
      "parentId": 5,
      "path": Array [
        0,
        1,
        0,
        7,
      ],
      "y": 8,
    },
    Object {
      "data": Object {
        "id": 21,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 15,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        0,
      ],
      "y": 9,
    },
    Object {
      "data": Object {
        "disabled": true,
        "id": 20,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 16,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        1,
      ],
      "y": 10,
    },
    Object {
      "data": Object {
        "id": 30,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 17,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        2,
      ],
      "y": 11,
    },
    Object {
      "data": Object {
        "id": 31,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 18,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        3,
      ],
      "y": 12,
    },
    Object {
      "data": Object {
        "disabled": true,
        "id": 32,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 19,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        4,
      ],
      "y": 13,
    },
    Object {
      "data": Object {
        "disabled": true,
        "id": 33,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 20,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        5,
      ],
      "y": 14,
    },
    Object {
      "data": Object {
        "disabled": true,
        "id": 34,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 21,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        6,
      ],
      "y": 15,
    },
    Object {
      "data": Object {
        "id": 35,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 22,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        7,
      ],
      "y": 16,
    },
    Object {
      "data": Object {
        "id": 36,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 23,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        8,
      ],
      "y": 17,
    },
    Object {
      "data": Object {
        "id": 37,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 24,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        9,
      ],
      "y": 18,
    },
    Object {
      "data": Object {
        "id": 38,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 25,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        10,
      ],
      "y": 19,
    },
    Object {
      "data": Object {
        "id": 39,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 26,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        11,
      ],
      "y": 20,
    },
    Object {
      "data": Object {
        "id": 40,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 27,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        12,
      ],
      "y": 21,
    },
    Object {
      "data": Object {
        "id": 41,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 28,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        13,
      ],
      "y": 22,
    },
    Object {
      "data": Object {
        "id": 42,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 29,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        14,
      ],
      "y": 23,
    },
    Object {
      "data": Object {
        "id": 43,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 30,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        15,
      ],
      "y": 24,
    },
    Object {
      "data": Object {
        "id": 44,
        "ref": Object {
          "current": Object {},
        },
        "type": 0,
      },
      "id": 31,
      "parentId": 14,
      "path": Array [
        0,
        1,
        1,
        16,
      ],
      "y": 25,
    },
  ],
]
`;
